Dev_mythip@capgemini.com_17Dec_ForGitSync/src/objects/Candidate_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <label>Candidate Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>schedule interviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>interviews completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>preparing offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>offer extended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>closed-rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>closed-accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>closed-declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Candidate Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SNAP-{000000}</displayFormat>
        <label>Candidate Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>